# specline-sb-gui

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
data/: receivers.json  vegas_modes.json
docs/: SPEC.md
spectral_sb_gui/: __main__.py  app.py  wizard.py
spectral_sb_gui/models/: observation.py
spectral_sb_gui/pages/: freq_page.py  preview_page.py  save_page.py  setup_page.py  source_page.py  strategy_page.py
