[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-sb-gui"
version = "0.1.0"
description = "GBT Spectral Line Scheduling Block GUI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ryan Lynch" }]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "astropy>=5.0",
    "astroquery>=0.4",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
spectral-sb-gui = "spectral_sb_gui.app:main"

[tool.setuptools.packages.find]
include = ["spectral_sb_gui*"]

[tool.ruff]
line-length = 100
